# frostmaiden_pyweather

./: README.md  config.py  main.py  pyproject.toml  weather.json  weather_calc.py
